--- a/nadine.html.html
+++ b/nadine.html.html
@@ -20,6 +20,11 @@ At Huye you will learn how to make a website. I love and enjoy this course very 
 	<li>mango</li>
 	<li>apple</li>
 </ul>
+	<ol>
+		<li>item4</li>
+		<li>item5</li>
+		<li>item6</li>
+	</ol>
 <table>
 	<tr><td>Names </td>
 		<td>RegNo </td>
